# 2526-student-practices-10th-grade-ameliia_dorosh-petur_dimitrov

./: .gitignore  .gitignore.txt  main.cpp  mainwindow.h  resources.qrc
cinemaMain/: cinemaMain.sln  menuTuiGraphic.txt
cinemaMain/cinemaLib/: cinemaLib.cpp  cinemaLib.vcxproj  cinemaLib.vcxproj.filters
cinemaMain/cinemaMain/: cinemaMain.cpp  cinemaMain.h  cinemaMain.vcxproj  cinemaMain.vcxproj.filters
kino-plex/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  resources.qrc
kino-plex/.qtcreator/: CMakeLists.txt.user.c1dbcad
kino-plex/database/: database.cpp  database.h
kino-plex/pages/: CMakeLists.txt  checkoutpage.cpp  checkoutpage.h  logandregisterpage.cpp  logandregisterpage.h  moviedetailspage.cpp  moviedetailspage.h  movielistpage.cpp  movielistpage.h  seatselectionpage.cpp  seatselectionpage.h  seatsselection-temp.txt  seatsselectionpage.cpp  seatsselectionpage.h  seatsselectionpage_old_to_remove.txt
kino-plex/pages/data/: movies.json
kino-plex/styles/: app.qss
pages/: CMakeLists.txt  logandregisterpage.h
